@@ -1,3 +1,10 @@
+2009-06-06  Aidan Kehoe  <kehoea@parhasard.net>
+
+	* files.el (cd): 
+	Make CDPATH handling portable, accept entries without trailing
+	slashes within it. Some style corrections from Stephen Turnbull,
+	thank you Stephen. 
+
 2009-05-29  Aidan Kehoe  <kehoea@parhasard.net>
 
 	* bytecomp.el (byte-compile-lambda): 
